<resources>
    <string name="app_name">Reward Daddy</string>
    <string name="quiz_panda">Quiz Panda</string>
    <string name="think_fast_play_smart_win_big">Think fast, play smart, win big!</string>
    <string name="random_percentage">57%</string>
    <string name="skip">Skip</string>
    <string name="on_boarding">On boarding</string>
    <string name="right_arrow">Right Arrow</string>
    <string name="start_playing">Start playing</string>
    <string name="trivia_challenges">Dive into our trivia challenges and put your knowledge to the test.</string>
    <string name="continue_button">Continue</string>
    <string name="choose_avatar">Choose avatar</string>
    <string name="avatar_image">Avatar Image</string>
    <string name="random_name">Sulaiman</string>
    <string name="let_s_go">Let\'s go!</string>
    <string name="hello_sulaiman">Hello, Sulaiman!</string>
    <string name="_100000">100000</string>
    <string name="default_web_client_id">703272212699-o4ld2ptcjmjdmtmfu64mmjuubk985ji3.apps.googleusercontent.com</string>

</resources>