<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OnboardingActivity"
    android:background="@drawable/gradient_background_onboarding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/on_boarding"
            android:textSize="18sp"
            android:fontFamily="@font/raleway_regular"
            android:layout_gravity="start"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/tv_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:textSize="18sp"
                android:gravity="end"
                android:fontFamily="@font/raleway_regular"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/arrow_right"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/right_arrow" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_onboarding_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_onboarding_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:importantForAccessibility="no" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_main"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        app:cardCornerRadius="60dp"
        app:layout_constraintTop_toBottomOf="@id/iv_onboarding_logo"
        tools:layout_editor_absoluteX="0dp" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >

            <LinearLayout
                android:id="@+id/ll_circles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <ImageView
                    android:id="@+id/iv_circle_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/circle_on"
                    android:layout_marginEnd="6dp"
                    android:importantForAccessibility="no" />

                <ImageView
                    android:id="@+id/iv_circle_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/circle_off"
                    android:layout_marginStart="6dp"
                    android:importantForAccessibility="no" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_playing"
                android:fontFamily="@font/raleway_regular"
                android:textSize="36sp"
                android:layout_marginTop="50dp"
                android:textColor="@color/black"
                android:textFontWeight="700"
                tools:ignore="UnusedAttribute"
                app:layout_constraintTop_toBottomOf="@id/ll_circles"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/tv_trivia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/trivia_challenges"
                android:fontFamily="@font/raleway_regular"
                android:textSize="21sp"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="#4E4E4E"
                android:textFontWeight="600"
                tools:ignore="UnusedAttribute"
                app:layout_constraintTop_toBottomOf="@id/tv_start"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/btn_continue"
                android:layout_width="143dp"
                android:layout_height="53dp"
                android:backgroundTint="#2684FF"
                android:fontFamily="@font/raleway_regular"
                android:text="@string/continue_button"
                android:textFontWeight="700"
                tools:ignore="UnusedAttribute"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@id/tv_trivia"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>