<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SplashActivity"
    android:background="@drawable/gradient_background_splash">

    <ImageView
        android:layout_width="155dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_panda"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/tv_quiz_panda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/tv_quiz_panda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_panda"
        android:fontFamily="@font/rammetto_one_regular"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:layout_marginTop="55dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/think_fast_play_smart_win_big"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_quiz_panda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/cpi_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            app:trackThickness="5dp"
            app:indicatorColor="@color/white"
            app:indicatorSize="56dp"
            app:trackCornerRadius="2dp"
            app:indicatorTrackGapSize="0dp"

            android:max="100"
            android:progress="50"
            />


        <TextView
            android:id="@+id/tv_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random_percentage"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

    </FrameLayout>



</androidx.constraintlayout.widget.ConstraintLayout>